=== Version 0.9.7
* Enhancements
  * Updated to use the latest watir-webdriver 0.6.8
  * Updated to use the latest selenium-webdriver 2.40.0

=== Version 0.9.6.1
* Enhancements
  * Table now supports exists?

=== Version 0.9.6 / 2014-2-4
* Enhancements
  * Updated to use the latest watir-webdriver 0.6.7
* Fixes
  * Added in_iframe methods to match the updates to the watir-webdriver gem.

=== Version 0.9.5 / 2014-1-22
* Enhancements
  * Updated to use the latest selenium-webdriver 2.39.0
  * Added href method to Link
  * Added generation of plural version of basic types on class
  * Added new accessors for radio button group (Thanks Travis Fillmore)

=== Version 0.9.4 / 2013-11-29
* Enhancements
  * Added ability for execute_scripts to accept arguments (Thanks Justin Ko)
  * Added ability to identify frame using a regular expression when using Watir

=== Version 0.9.3 / 2013-10-24
* Enhancements
  * Added class_name method to Element
  * Added select_text method to Element
  * Added wait_for_expected_title and expected_element_visible methods (Thanks smartkiwi)
  * Updated to use the latest selenium-webdriver 2.37.0
* Fixes
  * Fixed issue with custom widgets on Ruby 1.8.7 (Thanks X Zhang)

=== Version 0.9.2 / 2013-8-23
* Enhancements
  * Added elements method to accessor so one can gen methods for generic collections of elements
  * Updated to use the latest selenium-webdriver 2.35.0

=== Version 0.9.1 / 2013-7-16
* Enhancements
  * Added css locator support for Image (Thanks Elben Shira)
* Fixes
  * Corrected isse with generated method in widgets module

=== Version 0.9.0 / 2013-6-11
* Enhancements
  * Added plural _elements methods for the following types:
    * area
    * canvas
    * audio
    * video
    * svg
  * Added basic element support for the following types:
    * as
    * blockquote
    * body
    * br
    * caption
    * col
    * colgroup
    * command
    * data
    * datalist
    * del
    * details
    * dialog
    * dl
    * embed
    * fieldset